# RefineNB

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  cli.py  editable.py  output.py  prompts.py  translate.py  utils.py
src/scripts/: find_notebook_paths.py  make_notebooks_editable.py
tests/: 01_01_Overview_of_LLM_Capabilities_in_Data_Analysis-en-solution.ipynb  test_cli.py  test_output.py  test_translate.py  test_utils.py
