[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refinenb"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A tool for refining and translating Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "nbformat>=5.7.0",
    "rich>=10.0.0",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0"
]

[project.scripts]
refinenb = "src.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.hatch.build]
packages = ["src"] 